@@ -2,7 +2,7 @@
 # Select installation profile
 # ------------------------------------------------------
 echo -e "${GREEN}"
-figlet "Desktop Profile"
+figlet "Profile"
 echo -e "${NONE}"
 
 echo "SPACE = select/unselect a profile. RETURN = confirm. No selection = CANCEL"
@@ -10,4 +10,6 @@ profile=$(gum choose --no-limit --cursor-prefix "( ) " --selected-prefix "(x) " 
 if [ -z $profile ] ;then
     echo "No profile selected. Installation canceled."
     exit
+else
+    echo "Profile/s selected: $profile"
 fi
