@@ -4,10 +4,12 @@ https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.7
 Installation:
 - Display Manager SDDM and sugar-candy theme will be installed. 
 - Optional display manager disablement possible
-- Arco Linux is now supported. Please reinstall/force the installation of all packages during the installation/update script.
+- Select between hyprland or hyprland-git
+- Arco Linux is now supported. Please choose hyprland-git and reinstall/force the installation of all packages during the installation/update script.
 
 General:
 - Adding icons to eza. Adding ls, ll, lt
+- New alacritty.toml configuration file
 
 Hyprland:
 - New Waybar Module Idle Inhibitor to deactivate the automatic start of swaylock e.g. to watch videos or for online meetings 
